Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-11895

Setup > Partitions configuration > Scroll in partitions list doesn't work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.5
    • Setup

    Description

      Preconditions:
      1. Start a ReactOS setup
      2. To reach the point where you need to select the partition to install

      Steps to reproduce:

      1. Add a 21 lines to list of partitions (e.g. one primary partition and one extended partition with 18 child logical partitions)
      2. Move selection on unpartitioned space after extended partition or after last logical partition

      Expected result: list of partitions was scrolled and cursor is displayed on the bottom of list.
      Actual result: scroll in the list doesn't work, cursor doesn't displayed.

      Attachments

        1. VirtualBox_ReactOS_042.png
          14 kB
          RoZoVy_ScHiNoK
        2. multipartitions_ros.png
          39 kB
          thc
        3. multipartitions_xp.png
          40 kB
          thc
        4. partlist.c.patch
          1 kB
          thc

        Issue Links

          Activity

            People

              ekohl ekohl
              RoZoVy_ScHiNoK RoZoVy_ScHiNoK
              Votes:
              2 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: