[USETUP] Scroll in partitions list doesn't work. Patch by thc. CORE-11895 #resolve #comment Thanks a lot!

svn path=/trunk/; revision=73997